--- a/package.json
+++ b/package.json
@@ -10,15 +10,25 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-radio-group": "^1.2.0",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@types/formidable": "^3.4.5",
+    "appwrite": "^15.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "formidable": "^3.5.1",
+    "fs": "^0.0.1-security",
     "lucide-react": "^0.436.0",
     "next": "14.2.7",
     "next-themes": "^0.3.0",
+    "node-appwrite": "^14.0.0",
     "react": "^18",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.53.0",
     "react-phone-number-input": "^3.4.5",
     "tailwind-merge": "^2.5.2",
